--- a/gmx-2020.1-cuda-10.2-AVX_512/Dockerfile
+++ b/gmx-2020.1-cuda-10.2-AVX_512/Dockerfile
@@ -32,12 +32,17 @@ RUN wget -qO - https://apt.kitware.com/keys/kitware-archive-latest.asc | apt-key
         cmake && \
     rm -rf /var/lib/apt/lists/*
 
+COPY --from=gromacs/fftw /usr/local/lib \
+    /usr/local/include \
+    /usr/local/
+
 # ftp://ftp.gromacs.org/pub/gromacs/gromacs-2020.1.tar.gz
+
 RUN mkdir -p /var/tmp && wget -q -nc --no-check-certificate -P /var/tmp ftp://ftp.gromacs.org/pub/gromacs/gromacs-2020.1.tar.gz && \
     mkdir -p /var/tmp && tar -x -f /var/tmp/gromacs-2020.1.tar.gz -C /var/tmp -z && \
     cd /var/tmp/gromacs-2020.1 && \
     mkdir -p build && \
-    cmake -S . -B build -D CMAKE_BUILD_TYPE=Release -D CUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda -D GMX_SIMD=AVX_512 -D GMX_BUILD_OWN_FFTW=ON -D GMX_GPU=ON -D GMX_MPI=OFF -D CMAKE_INSTALL_PREFIX=/gromacs/bin.AVX_512 -D GMX_OPENMP=ON -G Ninja && \
+    cmake -S . -B build -D CMAKE_BUILD_TYPE=Release -D CUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda -D GMX_SIMD=AVX_512 -D GMX_FFT_LIBRARY=fftw3 -D GMX_GPU=ON -D GMX_MPI=OFF -D CMAKE_INSTALL_PREFIX=/gromacs/bin.AVX_512 -D GMX_OPENMP=ON -G Ninja && \
     cmake -S . -B build && \
     cmake --build build --target all -- -j2 && \
     g++ -O3 -mavx512f -std=c++11 -D GMX_IDENTIFY_AVX512_FMA_UNITS_STANDALONE=1 -D GMX_X86_GCC_INLINE_ASM=1 -D SIMD_AVX_512_CXX_SUPPORTED=1 ./src/gromacs/hardware/identifyavx512fmaunits.cpp -o build/bin/identifyavx512fmaunits && \
@@ -45,3 +50,5 @@ RUN mkdir -p /var/tmp && wget -q -nc --no-check-certificate -P /var/tmp ftp://ft
     cmake --install build && \
     cp build/bin/identifyavx512fmaunits /gromacs/bin.AVX_512/bin && \
     rm -rf /var/tmp/gromacs-2020.1 /var/tmp/gromacs-2020.1.tar.gz
+
+
