--- a/gmx-2020.1-cuda-10.2-SSE2/Dockerfile
+++ b/gmx-2020.1-cuda-10.2-SSE2/Dockerfile
@@ -6,7 +6,9 @@ RUN apt-get update -y && \
         ca-certificates \
         git \
         gnupg \
+        libblas-dev \
         libhwloc-dev \
+        liblapack-dev \
         libx11-dev \
         ninja-build \
         wget && \
@@ -42,7 +44,7 @@ RUN mkdir -p /var/tmp && wget -q -nc --no-check-certificate -P /var/tmp ftp://ft
     mkdir -p /var/tmp && tar -x -f /var/tmp/gromacs-2020.1.tar.gz -C /var/tmp -z && \
     cd /var/tmp/gromacs-2020.1 && \
     mkdir -p build && \
-    cmake -S . -B build -D CMAKE_BUILD_TYPE=Release -D CUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda -D GMX_SIMD=SSE2 -D GMX_FFT_LIBRARY=fftw3 -D GMX_GPU=ON -D GMX_MPI=OFF -D CMAKE_INSTALL_PREFIX=/gromacs/bin.SSE2 -D GMX_OPENMP=ON -G Ninja && \
+    cmake -S . -B build -D CMAKE_BUILD_TYPE=Release -D CUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda -D GMX_SIMD=SSE2 -D GMX_FFT_LIBRARY=fftw3 -D GMX_EXTERNAL_BLAS=ON -D GMX_EXTERNAL_LAPACK=ON -D GMX_GPU=ON -D GMX_MPI=OFF -D CMAKE_INSTALL_PREFIX=/gromacs/bin.SSE2 -D GMX_OPENMP=ON -G Ninja && \
     cmake -S . -B build && \
     cmake --build build --target all -- -j2 && \
     cd /var/tmp/gromacs-2020.1 && \
