--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ jobs:
   build:
     strategy:
       matrix:
-        SIMD: ["gmx-2020.2-cuda-10.2-SSE2", "gmx-2020.2-cuda-10.2-AVX2_256"]
+        simd: ["gmx-2020.2-cuda-10.2-SSE2", "gmx-2020.2-cuda-10.2-AVX2_256"]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - name: Build the Docker image
-      run: docker build -f ${{SIMD}}/Dockerfile .
+      run: docker build -f ${{matrix.simd}}/Dockerfile .
