--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Build the Docker image
-      #run: docker build -f ${{matrix.simd}}/Dockerfile .
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: longr/gromacs-docker-container-maker
-        dockerfile: ${{matrix.simd}}/Dockerfile .
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        tags: ${{matrix.simd}}
+      run: docker build -f ${{matrix.simd}}/Dockerfile .
+
+    - name: Docker Login
+      run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+
+    - name: Docker Push
+      run: docker push "longr/gromacs-docker-container-maker:${{matrix.simd}}
