--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
       run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
 
     - name: Docker Push
-      run: docker push "longr/gromacs-docker-container-maker:${{matrix.simd}}
+      run: docker push "longr/gromacs-docker-container-maker:${{matrix.simd}}"
