--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Build the Docker image
-      run: docker build -t "longr/gromacs-docker-container-maker:${{matrix.simd}}" -f ${{matrix.simd}}/Dockerfile .
+      run: docker build -t "longr/gromacs-docker:${{matrix.simd}}" -f ${{matrix.simd}}/Dockerfile .
 
     - name: List containers
       run: docker ps
@@ -26,4 +26,19 @@ jobs:
       run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
 
     - name: Docker Push
-      run: docker push "longr/gromacs-docker-container-maker:${{matrix.simd}}"
+      run: docker push "longr/gromacs-docker:${{matrix.simd}}"
+
+
+  combine:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: Build the Docker image
+      run: docker build -t "longr/gromacs-docker:all" -f Dockerfile .
+      
+    - name: Docker Login
+      run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+
+    - name: Docker Push
+      run: docker push "longr/gromacs-docker:gmx-2020.2-cuda-10.2"
