--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Build the Docker image
-      run: docker build -t "longr/gromacs-docker:gmx-2020.2-cuda-10.2" -f Dockerfile .
+      run: docker build -t "longr/gromacs-docker:gmx-2020.2-cuda-10.2" -t "longr/gromacs-docker:latest" -f Dockerfile .
       
     - name: Docker Login
       run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
