--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,8 @@ jobs:
     - name: Docker Login
       run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
 
-    - name: Docker Push
+    - name: Docker Push version tag
       run: docker push "longr/gromacs-docker:gmx-2020.2-cuda-10.2"
+
+    - name: Docker Push latest tag
+      run: docker push "longr/gromacs-docker:latest"
