--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,32 @@
 name: Test
 on: [push]
 jobs:
+  build_files:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-python@v1
+      with:
+        python-version: "3.7"
+    - name: Install dependencies
+      run: |
+        set -xe
+	python -VV
+	python -m site
+	python -m pip install --upgrade pip
+	python -m pip install argparse collections typing hpccm distutils
+
+    - name: Generate Dockerfiles
+      run: bash build-all-dockerfiles.sh
+
+    - name: Upload dockerfiles
+      uses: actions/upload-artifact@v1
+      with:
+        name: dockerfiles
+	path: gmx-*/
+    
   build:
+    needs: build_files
     strategy:
       matrix:
         simd: ["gmx-2020.2-cuda-10.2-AVX_256",
@@ -14,6 +39,12 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
     - uses: actions/checkout@master
+
+    - name: Download Dockerfiles
+      uses: actions/upload-artifact@v1
+      with:
+        name: dockerfiles
+
     - name: Generate Dockerfiles
       run: bash build-all-dockerfiles.sh
 
