--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         python -VV
         python -m site
         python -m pip install --upgrade pip
-        python -m pip install argparse collections typing hpccm distutils
+        python -m pip install hpccm
 
     - name: Generate Dockerfiles
       run: bash build-all-dockerfiles.sh
