ci skip  ;Upload artifacts debugging

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,7 @@ jobs:
     - name: DEBUG
       run: |
         pwd
-        ls
-        tree
+        ls gmx-*
         
     - name: Upload dockerfiles
       uses: actions/upload-artifact@v1
