--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         ls gmx-*
         
     - name: Upload dockerfiles
-      uses: actions/upload-artifact
+      uses: actions/upload-artifact@v2
       with:
         name: dockerfiles
         path: "gmx-.*"
