--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: dockerfiles
-        path: "gmx-.*"
+        path: "gmx-*"
         
     
   build:
