--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     - uses: actions/checkout@master
 
     - name: Download Dockerfiles
-      uses: actions/upload-artifact@v2
+      uses: actions/download-artifact@v2
       with:
         name: dockerfiles
 
